fix button z-index, add modal-video

--- a/static/app-assets/scss/pages/fund.scss
+++ b/static/app-assets/scss/pages/fund.scss
@@ -99,12 +99,18 @@
             }
         }
     }
+
     .navbar-profile {
         border-radius: 0;
 
         .fb-share {
             margin-top: 6px;
         }
+    }
+
+    .navbar-toggleable-xs {
+        position: relative;
+        z-index: 10;
     }
 
     .nav.navbar-nav {
